plugins {
    id 'java-library'
}
apply plugin: 'com.diffplug.spotless'

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

dependencies {
	//api files('libs/google-java-format.jar')
	//api files('libs/google-java-format-1.28.0.jar')
	//implementation project(path: ':common')
   // api 'com.google.auto.value:auto-value-annotations:1.11.0'
	//implementation "com.google.guava:guava:33.3.0-jre"
	//implementation project(path: ':javac')
  api 'com.google.googlejavaformat:google-java-format:1.28.0'
}

spotless {
		java {
			target "**/*.java"
			googleJavaFormat()
			}
}
tasks.withType(JavaCompile).configureEach {
    options.fork = true
    options.forkOptions.jvmArgs += [
        '--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
        '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
        '--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
        '--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
        '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
        '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
    ]
}
